# CUDA_learning

chapter11_CUDA流/: host-kernel.exp  host-kernel.lib
chapter2_CUDA中的线程组织/: hello2.exp  hello2.lib
chapter3_简单CUDA程序的基本框架/: add1.exp  add1.lib  add4device.cu
chapter5_获得GPU加速的关键/: CMakeLists.txt  Makefile  add1cpu.exp  add1cpu.lib  add2gpu.exp  add2gpu.lib  add3memcpy.exp  add3memcpy.lib  arithmetic1cpu.exp  arithmetic1cpu.lib  arithmetic2gpu.exp  arithmetic2gpu.lib
矩阵练习/: Makefile  matrix.cu  matrix.exp  matrix.lib
